<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
         
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.lunettes</groupId>
    <artifactId>usine</artifactId>
    <version>${revision}</version>
    <packaging>jar</packaging>
         
    <properties>
        <revision>1.0.0</revision>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
         
    <parent>
        <groupId>org.example</groupId>
        <artifactId>glasses-factory</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
         
    <repositories>
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/le-prof-de-raizo/repo-maven</url>
        </repository>
    </repositories>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>false</skip>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
         
    <dependencies>
        <dependency>
            <groupId>bernard-flou</groupId>
            <artifactId>fabricateur</artifactId>
            <version>0.0.1</version>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/Akip2/glasses-factory</url>
        </repository>
    </distributionManagement>
</project>
